--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/scripts.js"></script>
   <title>CSS spinners</title>
 </head>
 <body>
-  <div class="main spinner-3">
+  <div class="main">
     <h1>Hello, welcome to my website</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia expedita quasi iste non labore accusantium temporibus possimus ut excepturi aliquid vitae dolorem consequatur aspernatur, deleniti ab laboriosam ullam eaque sed, magnam inventore. Et vero soluta architecto, repudiandae laborum pariatur dolore neque, corrupti inventore voluptate. Dicta et, rem ipsa ipsam eligendi!</p>
   </div>
